--- a/docs/site/sidebars/lb4_sidebar.yml
+++ b/docs/site/sidebars/lb4_sidebar.yml
@@ -196,6 +196,10 @@ children:
       url: Customizing-how-openapi-spec-is-served.html
       output: 'web, pdf'
 
+    - title: 'Customzing routes'
+      url: Customizing-routes.html
+      output: 'web, pdf'
+
     - title: 'Dynamically adding models, repositories, and controllers'
       url: Dynamic-models-repositories-controllers.html
       output: 'web, pdf'
